# simplenote-server

./: Cargo.toml  README.md
src/: config  db.sql  main.rs
