[package]
name = "sn-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlite = "0.36.0"
axum = {version = "0.6.20", features = ["headers"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"]}
toml = "0.8.14"
